--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/png" href="ico/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="ico/favicon.ico"/>
 
     </head>
 
@@ -87,8 +87,8 @@
     <section id="contact" class="content-section text-center">
       <h2 id="bigtext">Contact</h2>
       <p id="normalfont"> You can reach me on LinkedIn or checkout my developer journey on GitHub.</p>
-      <a href="https://github.com/nicdevlin" target="_blank"><img border="0" alt="Github" src="img/git.png"></a>
-      <a class="social" href="https://www.linkedin.com/in/nicdevlin/" target="_blank"><img border="0" alt="LinkedIn" src="img/linkedin.png"></a>
+      <a class= "social" href="https://github.com/nicdevlin" target="_blank"><img class="sm"border="0" alt="Github" src="img/git.png"></a>
+      <a class="social" href="https://www.linkedin.com/in/nicdevlin/" target="_blank"><img class="sm" border="0" alt="LinkedIn" src="img/linkedin.png"></a>
     </section>
     <!-- Footer -->
     <footer>
